
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct device {int dummy; } ;
__attribute__((used)) static bool socfpga_a10_fpga_readable_reg(struct device *dev, unsigned int reg)
{
 switch (reg) {
 case 133:
 case 132:
 case 131:
 case 130:
 case 129:
 case 128:
  return 1;
 }
 return 0;
}
